[package]
name = "snarkvm-ledger"
version = "0.16.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node ledger for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2021"

[[bench]]
name = "block"
path = "benches/block.rs"
harness = false

[[bench]]
name = "transaction"
path = "benches/transaction.rs"
harness = false

[features]
default = [ "async", "indexmap/rayon", "rayon" ]
async = [
  "ledger-narwhal/async",
  "ledger-query/async",
  "synthesizer/async"
]
rocks = [ "ledger-store/rocks" ]
serial = [
  "console/serial",
  "ledger-authority/serial",
  "ledger-block/serial",
  "ledger-coinbase/serial",
  "ledger-committee/serial",
  "ledger-narwhal/serial",
  "ledger-query/serial",
  "ledger-store/serial",
  "synthesizer/serial"
]
test = [ "ledger-block/test" ]
test-helpers = [
  "ledger-test-helpers",
  "ledger-committee/test-helpers",
  "ledger-narwhal/test-helpers"
]
timer = [ "aleo-std/timer" ]

[dependencies.console]
package = "snarkvm-console"
path = "../console"
version = "=0.16.1"

[dependencies.ledger-authority]
package = "snarkvm-ledger-authority"
path = "./authority"
version = "=0.16.1"

[dependencies.ledger-block]
package = "snarkvm-ledger-block"
path = "./block"
version = "=0.16.1"

[dependencies.ledger-coinbase]
package = "snarkvm-ledger-coinbase"
path = "./coinbase"
version = "=0.16.1"

[dependencies.ledger-committee]
package = "snarkvm-ledger-committee"
path = "./committee"
version = "=0.16.1"

[dependencies.ledger-narwhal]
package = "snarkvm-ledger-narwhal"
path = "./narwhal"
version = "=0.16.1"

[dependencies.ledger-query]
package = "snarkvm-ledger-query"
path = "./query"
version = "=0.16.1"
features = [ "query" ]

[dependencies.ledger-store]
package = "snarkvm-ledger-store"
path = "./store"
version = "=0.16.1"

[dependencies.ledger-test-helpers]
package = "snarkvm-ledger-test-helpers"
path = "./test-helpers"
version = "=0.16.1"
optional = true

[dependencies.synthesizer]
package = "snarkvm-synthesizer"
path = "../synthesizer"
version = "=0.16.1"

[dependencies.aleo-std]
version = "0.1.18"
default-features = false

[dependencies.anyhow]
version = "1.0.73"

[dependencies.indexmap]
version = "2.0"
features = [ "serde" ]

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.time]
version = "0.3"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.criterion]
version = "0.5"

[dev-dependencies.ledger-block]
package = "snarkvm-ledger-block"
path = "./block"
features = [ "test" ]

[dev-dependencies.serde_json]
version = "1.0"
features = [ "preserve_order" ]
