[package]
name = "snarkvm-marlin"
version = "0.0.5"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "The Aleo Team <hello@aleo.org>"
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [
  "Cargo.toml",
  "src",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.0.5"

[dependencies.snarkvm-errors]
path = "../errors"
version = "0.0.5"

[dependencies.snarkvm-models]
path = "../models"
version = "0.0.5"

[dependencies.snarkvm-polycommit]
path = "../polycommit"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-profiler]
path = "../profiler"
version = "0.0.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.0.5"

[dependencies.blake2]
version = "0.9"
default-features = false

[dependencies.derivative]
version = "2"
features = [ "use_core" ]

[dependencies.digest]
version = "0.9"

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.rand_core]
version = "0.6"

[dependencies.rayon]
version = "1"
optional = true

[dev-dependencies.snarkvm-curves]
path = "../curves"

[features]
default = [ "std", "parallel" ]
std = [ "snarkvm-polycommit/std" ]
print-trace = [ "snarkvm-profiler/print-trace" ]
parallel = [ "std", "rayon" ]
