[package]
name = "snarkvm-marlin"
version = "0.7.5"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "The Aleo Team <hello@aleo.org>"
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE" ]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "snark"
path = "benches/marlin.rs"
harness = false

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-polycommit]
path = "../polycommit"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-profiler]
path = "../profiler"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.bincode]
version = "1.3"

[dependencies.blake2]
version = "0.9"
default-features = false

[dependencies.derivative]
version = "2"
features = [ "use_core" ]

[dependencies.digest]
version = "0.10"

[dependencies.hashbrown]
version = "0.11.2"

[dependencies.rand]
version = "0.8"

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.rand_core]
version = "0.6"
features = [ "getrandom" ]

[dependencies.rayon]
version = "1"
optional = true

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.smallvec]
version = "1.7"
default-features = false
features = [ "const_generics", "const_new" ]

[dev-dependencies.criterion]
version = "0.3.5"

[features]
default = [
  "std",
  "parallel",
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-gadgets/default",
  "snarkvm-polycommit/default",
  "snarkvm-r1cs/default",
  "snarkvm-utilities/default"
]
wasm = ["snarkvm-algorithms/wasm", "snarkvm-gadgets/full"]
std = [ ]
print-trace = [ "snarkvm-profiler/print-trace" ]
parallel = [ "std", "rayon" ]
