[package]
name = "snarkvm-metrics"
version = "0.16.18"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Metrics for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.metrics]
version = "0.22"

[dependencies.metrics-exporter-prometheus]
version = "0.13"
