[package]
name = "snarkvm-models"
version = "0.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Models for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-errors]
path = "../errors"
version = "0.0.2"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.0.2"
default-features = false

[dependencies.anyhow]
version = "1.0.38"

[dependencies.bincode]
version = "1.3.1"

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.derivative]
version = "2"

[dependencies.fxhash]
version = "0.2.1"

[dependencies.indexmap]
version = "1.6.0"

[dependencies.itertools]
version = "0.9.0"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.rand_xorshift]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1.0.123"
default-features = false
features = [ "derive" ]

[features]
default = [ "snarkvm-errors/default", "snarkvm-utilities/default" ]

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "integer_arithmetic"
path = "benches/integer_arithmetic.rs"
harness = false
