[package]
name = "snarkvm-narwhal"
version = "0.12.6"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Data structures for a Narwhal-style memory pool in a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [
    "compilers",
    "cryptography",
    "mathematics",
    "wasm",
    "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
serial = [ "console/serial" ]
wasm = [ "console/wasm" ]

[dependencies.console]
package = "snarkvm-console"
path = "../console"
version = "=0.12.6"

[dependencies.snarkvm-synthesizer-coinbase]
path = "../synthesizer/coinbase"
version = "=0.12.6"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.serde_json]
version = "1.0"
features = [ "preserve_order" ]
