[package]
name = "snarkvm-nonnative"
version = "0.0.4"
authors = [
  "Weikeng Chen",
  "Alessandro Chiesa",
  "Emma Dauterman",
  "Nicholas Ward",
  "The Aleo Team <hello@aleo.org>"
]
description = "A library for the nonnative field gadgets"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [
  "Cargo.toml",
  "src",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.0.4"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.0.4"
default-features = false

[dependencies.snarkvm-errors]
path = "../errors"
version = "0.0.4"
default-features = false

[dependencies.snarkvm-models]
path = "../models"
version = "0.0.4"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.0.4"
default-features = false

[dependencies]
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.3.0", default-features = false }
num-integer = { version = "0.1.44", default-features = false }

[features]
default = [ "std" ]
std = [ ]
