[package]
name = "snarkvm-nonnative"
version = "0.0.5"
authors = [
  "Weikeng Chen",
  "Alessandro Chiesa",
  "Emma Dauterman",
  "Nicholas Ward",
  "The Aleo Team <hello@aleo.org>"
]
description = "A library for the nonnative field gadgets"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [
  "Cargo.toml",
  "src",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.0.6"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.0.6"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.0.6"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.0.6"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.0.6"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.0.6"
default-features = false

[dependencies.num-bigint]
version = "0.3.0"
default-features = false

[dependencies.num-integer]
version = "0.1.44"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies.paste]
version = "1.0"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.rand_xorshift]
version = "0.3"

[features]
default = [ "std" ]
std = [ ]
