[package]
name = "snarkvm-objects"
version = "0.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Objects for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.0.2"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.0.2"
default-features = false

[dependencies.snarkvm-errors]
path = "../errors"
version = "0.0.2"
default-features = false

[dependencies.snarkvm-models]
path = "../models"
version = "0.0.2"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.0.2"
default-features = false

[dependencies.base58]
version = "0.1"

[dependencies.bech32]
version = "0.6"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.2"

[dependencies.once_cell]
version = "1.5.2"

[dependencies.rand]
version = "0.7"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.sha2]
version = "0.9"

[dev-dependencies.snarkvm-dpc]
path = "../dpc"

[dev-dependencies.bincode]
version = "1.3.1"

[features]
default = [
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-errors/default",
  "snarkvm-models/default",
  "snarkvm-utilities/default"
]
