[package]
name = "snarkvm-objects"
version = "0.2.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Objects for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.2.3"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.2.3"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.2.3"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.2.3"
default-features = false

[dependencies.anyhow]
version = "1.0"

[dependencies.bincode]
version = "1.3"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.hex]
version = "0.4.3"

[dependencies.once_cell]
version = "1.7.2"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.sha2]
version = "0.9"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.snarkvm-dpc]
path = "../dpc"

[dev-dependencies.bincode]
version = "1.3.2"

[features]
default = [
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-utilities/default"
]
