[package]
name = "snarkvm-parameters"
version = "0.11.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Parameters for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.11.1"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.11.1"

[dependencies.aleo-std]
version = "0.1.15"
default-features = false
features = [ "storage" ]

[dependencies.anyhow]
version = "1"

[dependencies.bincode]
version = "1"

[dependencies.cfg-if]
version = "1.0"

[dependencies.colored]
version = "2"
optional = true

[dependencies.hex]
version = "0.4.3"

[dependencies.indexmap]
version = "1.9"

[dependencies.itertools]
version = "0.10.3"

[dependencies.lazy_static]
version = "1.4"

[dependencies.parking_lot]
version = "0.12"

[dependencies.paste]
version = "1"

[dependencies.rand]
version = "0.8"

[dependencies.reqwest]
version = "0.11"
optional = true

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[target."cfg(not(target_family = \"wasm\"))".dependencies.curl]
version = "0.4.43"
optional = true

[dev-dependencies.snarkvm-algorithms]
path = "../algorithms"
default-features = false

[dev-dependencies.snarkvm-circuit]
path = "../circuit"

[dev-dependencies.snarkvm-console]
path = "../console"

[dev-dependencies.snarkvm-synthesizer]
path = "../synthesizer"

[dev-dependencies.curl]
version = "0.4.34"

[dev-dependencies.hex]
version = "0.4.3"

[dev-dependencies.rand]
version = "0.8"

[features]
default = [ "colored", "remote" ]
no_std_out = [ ]
remote = [ "curl" ]
wasm = [ "reqwest", "wasm-bindgen-futures" ]
