[package]
name = "snarkvm-parameters"
version = "0.14.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Parameters for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "colored", "remote" ]
no_std_out = [ ]
remote = [ "curl" ]
wasm = [ "encoding", "js-sys", "web-sys" ]

[dependencies.snarkvm-curves]
path = "../curves"
version = "=0.14.0"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "=0.14.0"

[dependencies.aleo-std]
version = "0.1.18"
default-features = false
features = [ "storage" ]

[dependencies.anyhow]
version = "1"

[dependencies.bincode]
version = "1"

[dependencies.cfg-if]
version = "1.0"

[dependencies.colored]
version = "2"
optional = true

[dependencies.encoding]
version = "0.2"
optional = true

[dependencies.hex]
version = "0.4.3"

[dependencies.indexmap]
version = "2.0"

[dependencies.itertools]
version = "0.11.0"

[dependencies.js-sys]
version = "0.3.64"
optional = true

[dependencies.lazy_static]
version = "1.4"

[dependencies.paste]
version = "1"

[dependencies.rand]
version = "0.8"

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dependencies.web-sys]
version = "0.3.64"
features = [ "XmlHttpRequest" ]
optional = true

[target."cfg(not(target_family = \"wasm\"))".dependencies.curl]
version = "0.4.43"
optional = true

[dev-dependencies.snarkvm-algorithms]
path = "../algorithms"
default-features = false

[dev-dependencies.snarkvm-circuit]
path = "../circuit"

[dev-dependencies.snarkvm-console]
path = "../console"

[dev-dependencies.snarkvm-ledger-store]
path = "../ledger/store"

[dev-dependencies.snarkvm-synthesizer]
path = "../synthesizer"

[dev-dependencies.wasm-bindgen-test]
version = "0.3.37"

[dev-dependencies.hex]
version = "0.4.3"

[dev-dependencies.rand]
version = "0.8"
